--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <li><a href="#">ホーム</a></li>
     <li><a href="#">サービス</a></li>
     <li><a href="#">会社概要</a></li>
-    <li><a href="#">レンタル方法</a></li>
+    <li><a href="#">レンタル方法</a></
  </div>
 </header>
 <main>
@@ -68,8 +68,7 @@
 <section>
   <div class="map">
     <h2 class="heading">交通アクセス</h2>
-    <iframe src="https://www.google.com/maps/embed？PB=!1m18!1m12!1m3!1d2371.5446083545703!2d130.71944758985745!3d32.79569153812719!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3540f3f4a78358ef%3a0x387ad8dc3fc9f5f1!2z54aK5pys440H44K244Kk440z5bCC6ZaA5a2m5qCh!5e0!3m2!1sja!4v1699702377907!5m2!1sja!2sja" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"referrerpolicy="no-referrer-when-downgrade"></iframe>
-  </div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6707.121349107307!2d130.6981503139423!3d32.803906244169674!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3540f412e6855555%3A0x3c2a243312aea32b!2z5qGc44Gu6aas5aC0IOWfjuW9qeiLkQ!5e0!3m2!1sja!2sjp!4v1705645411284!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  </div>
 </section>
 
 <section>
